# sentry-airflow

./: .gitignore  .travis.yml  README.md  __init__.py  pyproject.toml  requirements-test.txt  requirements.txt
hooks/: sentry_hook.py
sentry_plugin/: .travis.yml  README.md  __init__.py  requirements.txt
sentry_plugin/hooks/: sentry_hooks.py
sentry_plugin/tests/: test_sentry_hook.py
src/sentry_airflow/hooks/: sentry_hook.py
tests/: test_sentry_hook.py
